--- a/index.html
+++ b/index.html
@@ -1,10 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="/" lang="en"><span>Web</span>Studio</a>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+
+    <main>
+      <!-- Hero-->
+      <section>
+        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <button class="button">Замовити послугу</button>
+      </section>
+
+      <section>
+        <h2>Переваги підприємства, його якісні характеристики</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <!--Workarea-->
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/workarea-1.jpg"
+              alt="Чоловічі руки набирають програмний код, який відображається на планшета"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/workarea-2.jpg"
+              alt="Ноутбук, на екрані якого показані варіанти дисплея мобільних телефонів"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/workarea-3.jpg"
+              alt="Планшет, на дисплеї якого показана палітра всіх можливих тонів кольорів"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/member-1.jpg" alt="Чоловік" width="270" height="260" />
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/member-2.jpg" alt="Жінка" width="270" height="260" />
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/member-3.jpg" alt="Чоловік" width="270" height="260" />
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/member-4.jpg" alt="Чоловік" width="270" height="260" />
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <a href="/"><span>Web</span>Studio</a>
+      <address>
+        м. Київ, пр-т Лесі Українки, 26 <br />
+        <ul>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
