--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <header>
       <nav>
-        <a href="/" lang="en"><span>Web</span>Studio</a>
+        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
         <ul>
           <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
