--- a/index.html
+++ b/index.html
@@ -4,56 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a href="./studio.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="auth-nav">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- Hero-->
-      <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+      <section class="hero">
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button class="button">Замовити послугу</button>
       </section>
 
-      <section>
+      <!--Workarea-1-->
+      <section class="workarea">
         <h2>Переваги підприємства, його якісні характеристики</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <!--Workarea-->
-        <h2>Чим ми займаємося</h2>
+      <!--Workarea-2-->
+      <section class="workarea">
+        <h2 class="title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -82,40 +90,40 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/member-1.jpg" alt="Чоловік" width="270" height="260" />
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="title">Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/member-2.jpg" alt="Жінка" width="270" height="260" />
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="title">Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/member-3.jpg" alt="Чоловік" width="270" height="260" />
-            <h3>Микола Тарасов</h3>
+            <h3 class="title">Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/member-4.jpg" alt="Чоловік" width="270" height="260" />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="title">Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="/"><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo" lang="en"><span>Web</span>Studio</a>
       <address>
         м. Київ, пр-т Лесі Українки, 26 <br />
         <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a href="mailto:info@example.com" class="item">info@example.com</a></li>
+          <li><a href="tel:+380991111111" class="item">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
