--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -25,63 +26,103 @@
     <main>
       <h1>Сторінка Портфоліо</h1>
       <ul>
-        <li><a href=""></a>Все</li>
-        <li><a href=""></a>Веб-сайти</li>
-        <li><a href=""></a>Додатки</li>
-        <li><a href=""></a>Дизайн</li>
-        <li><a href=""></a>Маркетинг</li>
+        <li><button type="button">Все</button></li>
+        <li><button type="button">Веб-сайти</button></li>
+        <li><button type="button">Додатки</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
       </ul>
       <ul>
         <li>
-          <a href=""
-            ><img src="./images/portfolio-1.jpg" alt="Дисплей ноутбуку із зображенням сайту"
-          /></a>
+          <a href="">
+            <img
+              src="./images/portfolio-1.jpg"
+              alt="Дисплей ноутбуку із зображенням сайту"
+              width="370"
+              height="294"
+            />
+          </a>
           <h2>Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <a href=""><img src="./images/portfolio-2.jpg" alt="Два гравці в баскетбол" /></a>
+          <a href="">
+            <img
+              src="./images/portfolio-2.jpg"
+              alt="Два гравці в баскетбол"
+              width="370"
+              height="294"
+            />
+          </a>
           <h2>Постер New Orlean vs Golden Star</h2>
           <p>Дизайн</p>
         </li>
         <li>
-          <a href=""><img src="./images/portfolio-3.jpg" alt="Емблема ресторану Seafood" /></a>
+          <a href="">
+            <img
+              src="./images/portfolio-3.jpg"
+              alt="Емблема ресторану Seafood"
+              width="370"
+              height="294"
+            />
+          </a>
           <h2>Ресторан Seafood</h2>
           <p>Додаток</p>
         </li>
         <li>
-          <a href=""><img src="./images/portfolio-4.jpg" alt="Навушники" /></a>
+          <a href="">
+            <img src="./images/portfolio-4.jpg" alt="Навушники" width="370" height="294" />
+          </a>
           <h2>Проєкт Prime</h2>
           <p>Маркетинг</p>
         </li>
         <li>
-          <a href=""><img src="./images/portfolio-5.jpg" alt="Дві коробки" /></a>
+          <a href="">
+            <img src="./images/portfolio-5.jpg" alt="Дві коробки" width="370" height="294" />
+          </a>
           <h2>Проєкт Boxes</h2>
           <p>Додаток</p>
         </li>
         <li>
-          <a href=""
-            ><img
+          <a href="">
+            <img
               src="./images/portfolio-6.jpg"
               alt="Монітор комп'ютера із зображенням карти світу"
-          /></a>
+              width="370"
+              height="294"
+            />
+          </a>
           <h2>Inspiration has no Borders</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <a href=""><img src="./images/portfolio-7.jpg" alt="Журнал" /></a>
+          <a href="">
+            <img src="./images/portfolio-7.jpg" alt="Журнал" width="370" height="294" />
+          </a>
           <h2>Видання Limited Edition</h2>
           <p>Дизайн</p>
         </li>
         <li>
-          <a href=""><img src="./images/portfolio-8.jpg" alt="Бірка з написом psd Mockup LAB" /></a>
+          <a href="">
+            <img
+              src="./images/portfolio-8.jpg"
+              alt="Бірка з написом psd Mockup LAB"
+              width="370"
+              height="294"
+            />
+          </a>
           <h2>Проект LAB</h2>
           <p>Маркетинг</p>
         </li>
         <li>
-          <a href=""
-            ><img src="./images/portfolio-9.jpg" alt="Руки людини, що працює за ноутбуком"
-          /></a>
+          <a href="">
+            <img
+              src="./images/portfolio-9.jpg"
+              alt="Руки людини, що працює за ноутбуком"
+              width="370"
+              height="294"
+            />
+          </a>
           <h2>Growing Business</h2>
           <p>Додаток</p>
         </li>
@@ -89,7 +130,7 @@
     </main>
 
     <footer>
-      <a href="/"><span>Web</span>Studio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <address>
         м. Київ, пр-т Лесі Українки, 26 <br />
         <ul>
