--- a/index.html
+++ b/index.html
@@ -13,57 +13,75 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="./studio.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo link" lang="en"
+          ><span class="accent-logo">Web</span>Studio</a
+        >
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="./studio.html" class="header-link link">Студія</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link link">Портфоліо</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link link">Контакти</a>
+          </li>
         </ul>
       </nav>
 
-      <ul class="auth-nav">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      <ul class="auth-nav list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- Hero-->
       <section class="hero">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button class="button">Замовити послугу</button>
+        <h1 class="hero-main-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
 
-      <!--Workarea-1-->
-      <section class="workarea">
-        <h2>Переваги підприємства, його якісні характеристики</h2>
-        <ul>
-          <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <!--Advantages-->
+      <section class="advantages">
+        <h2 class="visually-hidden">Переваги підприємства, його якісні характеристики</h2>
+        <ul class="advantages-list list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Увага до деталей</h3>
+            <p class="advantages-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
-          <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Пунктуальність</h3>
+            <p class="advantages-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
-          <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Планування</h3>
+            <p class="advantages-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Сучасні технології</h3>
+            <p class="advantages-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
 
-      <!--Workarea-2-->
+      <!--Workarea-->
       <section class="workarea">
-        <h2 class="title">Чим ми займаємося</h2>
-        <ul>
-          <li>
+        <h2 class="workarea-title-section">Чим ми займаємося</h2>
+        <ul class="workarea-list list">
+          <li class="workarea-item">
             <img
               src="./images/workarea-1.jpg"
               alt="Чоловічі руки набирають програмний код, який відображається на планшета"
@@ -71,7 +89,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="workarea-item">
             <img
               src="./images/workarea-2.jpg"
               alt="Ноутбук, на екрані якого показані варіанти дисплея мобільних телефонів"
@@ -79,7 +97,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="workarea-item">
             <img
               src="./images/workarea-3.jpg"
               alt="Планшет, на дисплеї якого показана палітра всіх можливих тонів кольорів"
@@ -91,39 +109,43 @@
       </section>
 
       <section class="team">
-        <h2 class="title">Наша команда</h2>
-        <ul>
-          <li>
+        <h2 class="team-title-section">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img src="./images/member-1.jpg" alt="Чоловік" width="270" height="260" />
-            <h3 class="title">Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-title">Ігор Дем'яненко</h3>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/member-2.jpg" alt="Жінка" width="270" height="260" />
-            <h3 class="title">Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-title">Ольга Рєпіна</h3>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/member-3.jpg" alt="Чоловік" width="270" height="260" />
-            <h3 class="title">Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-title">Микола Тарасов</h3>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/member-4.jpg" alt="Чоловік" width="270" height="260" />
-            <h3 class="title">Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-title">Михайло Єрмаков</h3>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo" lang="en"><span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo" lang="en"
+        ><span class="accent-logo">Web</span>Studio</a
+      >
       <address>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        <ul>
-          <li><a href="mailto:info@example.com" class="item">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="item">+38 099 111 11 11</a></li>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="address-list list">
+          <li>
+            <a href="mailto:info@example.com" class="address-mail-link link">info@example.com</a>
+          </li>
+          <li><a href="tel:+380991111111" class="address-tel-link link">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
