--- a/portfolio.html
+++ b/portfolio.html
@@ -4,35 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
+        <ul class="list">
+          <li><a href="./studio.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="auth-nav">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <h1>Сторінка Портфоліо</h1>
-      <ul>
+      <ul class="list">
         <li><button type="button">Все</button></li>
         <li><button type="button">Веб-сайти</button></li>
         <li><button type="button">Додатки</button></li>
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
-      <ul>
+      <ul class="list">
         <li>
           <a href="">
             <img
@@ -129,13 +135,13 @@
       </ul>
     </main>
 
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo" lang="en"><span>Web</span>Studio</a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="list">
+          <li><a href="mailto:info@example.com" class="item">info@example.com</a></li>
+          <li><a href="tel:+380991111111" class="item">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
