--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo" lang="en"
+      <a href="./index.html" class="footer-logo link" lang="en"
         ><span class="accent-logo">Web</span>Studio</a
       >
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="address-list list">
-          <li>
+          <li class="footer-item">
             <a href="mailto:info@example.com" class="address-mail-link link">info@example.com</a>
           </li>
           <li><a href="tel:+380991111111" class="address-tel-link link">+38 099 111 11 11</a></li>
