--- a/portfolio.html
+++ b/portfolio.html
@@ -13,135 +13,166 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
-        <ul class="list">
-          <li><a href="./studio.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo link" lang="en"
+          ><span class="accent-logo">Web</span>Studio
+        </a>
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="./studio.html" class="header-link link">Студія</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link link">Портфоліо</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link link">Контакти</a>
+          </li>
         </ul>
       </nav>
 
-      <ul class="auth-nav">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      <ul class="auth-nav list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <h1>Сторінка Портфоліо</h1>
-      <ul class="list">
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <ul class="list">
-        <li>
-          <a href="">
-            <img
-              src="./images/portfolio-1.jpg"
-              alt="Дисплей ноутбуку із зображенням сайту"
-              width="370"
-              height="294"
-            />
-          </a>
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/portfolio-2.jpg"
-              alt="Два гравці в баскетбол"
-              width="370"
-              height="294"
-            />
-          </a>
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/portfolio-3.jpg"
-              alt="Емблема ресторану Seafood"
-              width="370"
-              height="294"
-            />
-          </a>
-          <h2>Ресторан Seafood</h2>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio-4.jpg" alt="Навушники" width="370" height="294" />
-          </a>
-          <h2>Проєкт Prime</h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio-5.jpg" alt="Дві коробки" width="370" height="294" />
-          </a>
-          <h2>Проєкт Boxes</h2>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/portfolio-6.jpg"
-              alt="Монітор комп'ютера із зображенням карти світу"
-              width="370"
-              height="294"
-            />
-          </a>
-          <h2>Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio-7.jpg" alt="Журнал" width="370" height="294" />
-          </a>
-          <h2>Видання Limited Edition</h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/portfolio-8.jpg"
-              alt="Бірка з написом psd Mockup LAB"
-              width="370"
-              height="294"
-            />
-          </a>
-          <h2>Проект LAB</h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/portfolio-9.jpg"
-              alt="Руки людини, що працює за ноутбуком"
-              width="370"
-              height="294"
-            />
-          </a>
-          <h2>Growing Business</h2>
-          <p>Додаток</p>
-        </li>
-      </ul>
+      <section class="portfolio">
+        <!--FILTER-BUTTON-->
+        <h1 class="visually-hidden">Сторінка Портфоліо</h1>
+        <ul class="portfolio-btn-list list">
+          <li class="portfolio-btn-item">
+            <button type="button" class="portfolio-btn">Все</button>
+          </li>
+          <li class="portfolio-btn-item">
+            <button type="button" class="portfolio-btn">Веб-сайти</button>
+          </li>
+          <li class="portfolio-btn-item">
+            <button type="button" class="portfolio-btn">Додатки</button>
+          </li>
+          <li class="portfolio-btn-item">
+            <button type="button" class="portfolio-btn">Дизайн</button>
+          </li>
+          <li class="portfolio-btn-item">
+            <button type="button" class="portfolio-btn">Маркетинг</button>
+          </li>
+
+          <!--Pictures-->
+        </ul>
+        <ul class="portfolio-list list">
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img
+                src="./images/portfolio-1.jpg"
+                alt="Дисплей ноутбуку із зображенням сайту"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="portfolio-list-title">Технокряк</h2>
+            <p class="portfolio-list-text">Веб-сайт</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img
+                src="./images/portfolio-2.jpg"
+                alt="Два гравці в баскетбол"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="portfolio-list-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="portfolio-list-text">Дизайн</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img
+                src="./images/portfolio-3.jpg"
+                alt="Емблема ресторану Seafood"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="portfolio-list-title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="portfolio-list-text">Додаток</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img src="./images/portfolio-4.jpg" alt="Навушники" width="370" height="294" />
+            </a>
+            <h2 class="portfolio-list-title">Проєкт <span lang="en">Prime</span></h2>
+            <p class="portfolio-list-text">Маркетинг</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img src="./images/portfolio-5.jpg" alt="Дві коробки" width="370" height="294" />
+            </a>
+            <h2 class="portfolio-list-title">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="portfolio-list-text">Додаток</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img
+                src="./images/portfolio-6.jpg"
+                alt="Монітор комп'ютера із зображенням карти світу"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="portfolio-list-title" lang="en">Inspiration has no Borders</h2>
+            <p class="portfolio-list-text">Веб-сайт</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img src="./images/portfolio-7.jpg" alt="Журнал" width="370" height="294" />
+            </a>
+            <h2 class="portfolio-list-title">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="portfolio-list-text">Дизайн</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img
+                src="./images/portfolio-8.jpg"
+                alt="Бірка з написом psd Mockup LAB"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="portfolio-list-title">Проект <span lang="en">LAB</span></h2>
+            <p class="portfolio-list-text">Маркетинг</p>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-list-link link">
+              <img
+                src="./images/portfolio-9.jpg"
+                alt="Руки людини, що працює за ноутбуком"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="portfolio-list-title" lang="en">Growing Business</h2>
+            <p class="portfolio-list-text">Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo" lang="en"><span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo link" lang="en"
+        ><span class="accent-logo">Web</span>Studio</a
+      >
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul class="list">
-          <li><a href="mailto:info@example.com" class="item">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="item">+38 099 111 11 11</a></li>
+        <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="address-list list">
+          <li class="footer-item">
+            <a href="mailto:info@example.com" class="address-mail-link link">info@example.com</a>
+          </li>
+          <li><a href="tel:+380991111111" class="address-tel-link link">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
