Додаю стилі в portfolio.html
Задаю колір та шрифти в portfolio.html.
Змінюю клас <header class="header-page">  та додаю фон в хедер

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header-page">
       <nav class="header-nav">
         <a href="./index.html" class="header-logo link" lang="en"
           ><span class="accent-logo">Web</span>Studio</a
