--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header-page">
       <nav class="header-nav">
         <a href="./index.html" class="header-logo link" lang="en"
           ><span class="accent-logo">Web</span>Studio
@@ -40,24 +40,24 @@
     </header>
 
     <main>
-      <section class="portfolio">
+      <section class="portfolio-page">
         <!--FILTER-BUTTON-->
         <h1 class="visually-hidden">Сторінка Портфоліо</h1>
         <ul class="portfolio-btn-list list">
           <li class="portfolio-btn-item">
-            <button type="button" class="portfolio-btn">Все</button>
+            <button type="button" class="portfolio-btn btn">Все</button>
           </li>
           <li class="portfolio-btn-item">
-            <button type="button" class="portfolio-btn">Веб-сайти</button>
+            <button type="button" class="portfolio-btn btn">Веб-сайти</button>
           </li>
           <li class="portfolio-btn-item">
-            <button type="button" class="portfolio-btn">Додатки</button>
+            <button type="button" class="portfolio-btn btn">Додатки</button>
           </li>
           <li class="portfolio-btn-item">
-            <button type="button" class="portfolio-btn">Дизайн</button>
+            <button type="button" class="portfolio-btn btn">Дизайн</button>
           </li>
           <li class="portfolio-btn-item">
-            <button type="button" class="portfolio-btn">Маркетинг</button>
+            <button type="button" class="portfolio-btn btn">Маркетинг</button>
           </li>
 
           <!--Pictures-->
