--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <a href="./studio.html" class="header-link link">Студія</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link link">Портфоліо</a>
+            <a href="./portfolio.html" class="header-link link active">Портфоліо</a>
           </li>
           <li class="header-item">
             <a href="" class="header-link link">Контакти</a>
@@ -71,9 +71,9 @@
                 width="370"
                 height="294"
               />
+              <h2 class="portfolio-list-title">Технокряк</h2>
+              <p class="portfolio-list-text">Веб-сайт</p>
             </a>
-            <h2 class="portfolio-list-title">Технокряк</h2>
-            <p class="portfolio-list-text">Веб-сайт</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
@@ -95,44 +95,44 @@
                 src="./images/portfolio-3.jpg"
                 alt="Емблема ресторану Seafood"
                 width="370"
-                height="294"
+                hight="294"
               />
+              <h2 class="portfolio-list-title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="portfolio-list-text">Додаток</p>
             </a>
-            <h2 class="portfolio-list-title">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="portfolio-list-text">Додаток</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
               <img src="./images/portfolio-4.jpg" alt="Навушники" width="370" height="294" />
+              <h2 class="portfolio-list-title">Проєкт <span lang="en">Prime</span></h2>
+              <p class="portfolio-list-text">Маркетинг</p>
             </a>
-            <h2 class="portfolio-list-title">Проєкт <span lang="en">Prime</span></h2>
-            <p class="portfolio-list-text">Маркетинг</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
               <img src="./images/portfolio-5.jpg" alt="Дві коробки" width="370" height="294" />
+              <h2 class="portfolio-list-title">Проєкт <span lang="en">Boxes</span></h2>
+              <p class="portfolio-list-text">Додаток</p>
             </a>
-            <h2 class="portfolio-list-title">Проєкт <span lang="en">Boxes</span></h2>
-            <p class="portfolio-list-text">Додаток</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
               <img
                 src="./images/portfolio-6.jpg"
-                alt="Монітор комп'ютера із зображенням карти світу"
+                alt="Монітор компєютера"
                 width="370"
                 height="294"
               />
+              <h2 class="portfolio-list-title" lang="en">Inspiration has no Borders</h2>
+              <p class="portfolio-list-text">Веб-сайт</p>
             </a>
-            <h2 class="portfolio-list-title" lang="en">Inspiration has no Borders</h2>
-            <p class="portfolio-list-text">Веб-сайт</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
               <img src="./images/portfolio-7.jpg" alt="Журнал" width="370" height="294" />
+              <h2 class="portfolio-list-title">Видання <span lang="en">Limited Edition</span></h2>
+              <p class="portfolio-list-text">Дизайн</p>
             </a>
-            <h2 class="portfolio-list-title">Видання <span lang="en">Limited Edition</span></h2>
-            <p class="portfolio-list-text">Дизайн</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
@@ -142,9 +142,9 @@
                 width="370"
                 height="294"
               />
+              <h2 class="portfolio-list-title">Проект <span lang="en">LAB</span></h2>
+              <p class="portfolio-list-text">Маркетинг</p>
             </a>
-            <h2 class="portfolio-list-title">Проект <span lang="en">LAB</span></h2>
-            <p class="portfolio-list-text">Маркетинг</p>
           </li>
           <li class="portfolio-list-item">
             <a href="" class="portfolio-list-link link">
@@ -152,11 +152,10 @@
                 src="./images/portfolio-9.jpg"
                 alt="Руки людини, що працює за ноутбуком"
                 width="370"
-                height="294"
               />
+              <h2 class="portfolio-list-title" lang="en">Growing Business</h2>
+              <p class="portfolio-list-text">Додаток</p>
             </a>
-            <h2 class="portfolio-list-title" lang="en">Growing Business</h2>
-            <p class="portfolio-list-text">Додаток</p>
           </li>
         </ul>
       </section>
