Поправки до ДЗ-2
Стилізувала кнопку (ховер, фокус) в секції Hero
На сторінці Портфоліо img+h2+p огорнула тегом а.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- Hero-->
       <section class="hero">
         <h1 class="hero-main-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-btn">Замовити послугу</button>
+        <button type="button" class="hero-btn btn">Замовити послугу</button>
       </section>
 
       <!--Advantages-->
