--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./studio.html" class="header-link link">Студія</a>
+            <a href="./index.html" class="header-link link active">Студія</a>
           </li>
           <li class="header-item">
             <a href="./portfolio.html" class="header-link link">Портфоліо</a>
