--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header-page">
-      <nav class="header-nav">
+      <nav class="header-nav main-nav">
         <a href="./index.html" class="header-logo link" lang="en"
           ><span class="accent-logo">Web</span>Studio</a
         >
@@ -32,10 +32,12 @@
       </nav>
 
       <ul class="auth-nav list">
-        <li>
+        <li class="item">
           <a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a></li>
+        <li class="item">
+          <a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
